@@ -1,4 +1,4 @@
-TESTS			 = test_random test_manyunits
+TESTS			 = test_random test_manyunits test_globals
 TESTS_NON_MSVC		 =
 
 LIB_SRC			 = rand.cpp seed.cpp version.cpp exithandler.cpp verbose.cpp log.cpp
