@@ -22,6 +22,7 @@ Version 1.3.1 (unreleased)
   - Fix race growing files during concurrent block allocation.
   - Allow reading a block that spans over end-of-file, fill remainder with
     zeroes.
+  - Crash at program termination when using global stxxl containers.
 * New public header: stxxl/stats
 * Platform Support 
   - add ICPC 12.0, works with both MCSTL (needs libstdc++ from GCC 4.2) and
